# fastapi-test-project

./: .pre-commit-config.yaml  Makefile  docker-compose.yaml  env.example
backend/: Dockerfile  pyproject.toml
backend/app/: Makefile  app_factory.py  main.py  settings.py
backend/app/apps/auth/: auth_handler.py  dependencies.py  router.py
backend/app/apps/core/: base_crud.py  base_models.py  dependencies.py  schemas.py
backend/app/apps/info/: router.py  schemas.py
backend/app/apps/users/: crud.py  models.py  router.py  schemas.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 2025_12_30_1907-03bf42f2c72a_add_user.py  2026_01_03_1143-405889cb6d34_add_user_password.py
backend/app/services/: betterstack_service.py  sentry_service.py
backend/tests/: conftest.py  test_users.py
docs/: mkdocs.yml
docs/docs/: index.md  logging.md
nginx/: nginx.conf
