[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    { name = "0xsheff", email = "0xsheff@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.127.0,<0.128.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
