[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    { name = "0xsheff", email = "0xsheff@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.127.0,<0.128.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "password-strength (>=0.0.3.post2,<0.0.4)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (<4.0)",
    "scalar-fastapi (>=1.6.0,<2.0.0)",
    "sentry-sdk[fastapi] (>=2.49.0,<3.0.0)",
    "orjson (>=3.11.5,<4.0.0)",
    "logtail-python (>=0.3.4,<0.4.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "app"
testpaths = ["tests"]
asyncio_mode = "auto"
